# Loopentx-

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/heartbeat/: loop.py
examples/research/: loop.py
examples/supervisor/: loop.py
loopentx/: __init__.py
loopentx/backends/: __init__.py  base.py  memory.py  redis_backend.py
loopentx/cli/: main.py
loopentx/core/: __init__.py  config.py  context.py  events.py  exceptions.py  loop.py  memory.py  models.py  orchestrator.py  skill.py
loopentx/llm/: __init__.py  caller.py
loopentx/trust/: __init__.py  policy.py  scorer.py
tests/: test_loopentx.py
