[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "loopentx"
version = "0.1.0"
description = "Write the loop once. Step back. Loopentx runs it forever."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Loopentx Contributors" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "agents", "llm", "loops", "orchestration", "agentic", "autonomous"]

dependencies = [
    "pydantic>=2.0",
    "anyio>=4.0",
    "httpx>=0.25",
    "croniter>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "structlog>=24.0",
    "python-ulid>=2.0",
]

[project.optional-dependencies]
redis     = ["redis[hiredis]>=5.0"]
postgres  = ["asyncpg>=0.29", "sqlalchemy[asyncio]>=2.0"]
openai    = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
loopentx = "loopentx.cli.main:cli"

[project.urls]
Homepage   = "https://github.com/yourusername/loopentx"
Repository = "https://github.com/yourusername/loopentx"
Issues     = "https://github.com/yourusername/loopentx/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["loopentx*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version      = "3.10"
strict              = true
ignore_missing_imports = true
